new file:   home/images/tall.jpg 	modified:   home/index.htm 	modified:   model_management/index.htm 	modified:   resources/cityschema.css 	modified:   resources/cityschema_includes.js 	deleted:    resources/includes.js 	new file:   stewardship/images/tall.jpg 	new file:   stewardship/images/wide.jpg 	new file:   stewardship/index.htm 	modified:   submissions/index.htm

--- a/model_management/index.htm
+++ b/model_management/index.htm
@@ -58,7 +58,7 @@
       </ol>
 <HR>
     <h2 id="roles">Enterprise and Technical Viewpoints</h2>
-    Before digging into the technical details of <b>How</b> to manage a city-wide collection of 3D models, it will be useful to have a picture of the sorts of people for whom this scheme has been designed, and the personal and institutional <b>motivations</b> that make this effort worthwhile.  
+    <p>Before digging into the technical details of <b>How</b> to manage a city-wide collection of 3D models, it will be useful to have a picture of the sorts of people for whom this scheme has been designed, and the personal and institutional <b>motivations</b> that make this effort worthwhile.  
 </p><p>
     The <b>Technical User</b> is the sort of person who carries out edits and other data management tasks regarding geographic data in a municipality.  This is a person who knows how to use 3D modeling tools and has experience with the issues that come up when working with 3D models in various formats.  The technical user also has an understanding of GIS, relational database fundamentals and basic programming with ArcGIS model builder.  Basic programming with python and javascript is useful, as well.
   </p><p>
