modified:   home/index.htm

--- a/home/index.htm
+++ b/home/index.htm
@@ -81,7 +81,7 @@
 
     <h3 id="fab">Features and Benefits </h3>
     <ul>
-    <li>Save time and money in developing a city model curationprogram from scratch.
+    <li>Save time and money in developing a city model curation program from scratch.
     <li>Preserve historical and source information.  Audit and recovery capabilities for all changes.  
     <li>Protect against loss of knowledge when data management staff move to other projects or jobs. 
     <li>Routine QC and validation of 3d models prevents unexpected roadblocks to exchange and migration.
@@ -90,7 +90,7 @@
     <ul>
       <li>Archival asset management systems
       <li>Virtual and Augmented reality
-      <li>Open source tool-chains and viewers (e.g. cesium)
+      <li>Open source tool-chains and viewers (e.g. Cesium, ThreeJS)
       <li>High performance proprietary enterprise GIS.
       </ul>
     </ul>
