--- a/home/index.htm
+++ b/home/index.htm
@@ -82,6 +82,7 @@
     <h3 id="fab">Features and Benefits </h3>
     <ul>
     <li>Save time and money in developing a city model curation program from scratch.
+    <li>Eliminate redundant effort.  Participate in a resource-sharing and skill-building community. 
     <li>Preserve historical and source information.  Audit and recovery capabilities for all changes.  
     <li>Protect against loss of knowledge when data management staff move to other projects or jobs. 
     <li>Routine QC and validation of 3d models prevents unexpected roadblocks to exchange and migration.
@@ -107,15 +108,7 @@
     </p><p>
 
     
-    
-    <h3 id="why">Expensive observations and effort are going to waste.</h3>
-    <p>We know that in the Boston area there are several municipal governments, campus administrations and architecture firms that maintain broad-scale 3D models for their territorial interests and surrounding area. These models are used primarily for visualizing proposed changes. Many of these models overlap with each-other resulting in redundancy of details and of effort.  Opportunities to systematically remember the past form of the city is fragmented and impractical to collect -- even though millions of dollars are spent annually by different agencies to collect systematic snapshots of the city. 
-    </p>
-
-    Everyone agrees that ongoing collaboration in information stewardship is a good idea, but this does not seem to be a pattern that emerges spontaneously!   We do not see region-wide collaboration in the development and stewardship of city models because figuring out how to organize the work is very time-consuming. Individual participants don't have the motivation or skills think through the needs of collaborators from different disciplines with tools and workflows that pose real difficulties for information exchange. 
-    </p><p>
-      This project, sponsored in part by the <b>City of Boston Planning and Development Agency Office of Digital Cartography and GIS </b>  is designed to diminish these obstacles by working with contributors from the spectrum of disciplines to create a ready-made framework that is designed to preserve information about the shape of places in the city through all of the hand-offs that are required.
-    </p>
+ 
     </p>
     <h3 id="streetscapes">Streetscapes are part of our Shared Cultural Heritage</h3> 
     <p>The world-wide web has brought about many new possibilities to access and connect information resources about people, places, things and ideas. Georeferencing is a powerful way of connecting resources that relate to places.  <a href="https://www.historypin.org/" target="outboard">HistoryPIN</a>, <a href="https://www.digitalcommonwealth.org/map" target="outboard">Digital Commonwealth</a> and <a href="https://atlascope.leventhalmap.org/" target="outboard">AtlasScope</a> are three examples of cultural preservation projects that use georeferencing to connect historical documents.  These are part of a greater movement known as Digital Humanities, in that is bringing about new ways of discovering,connecting and presenting ideas.  
