modified:   home/index.htm

--- a/home/index.htm
+++ b/home/index.htm
@@ -157,7 +157,7 @@
     <h2>Extending the Boston Metro City Model</h2>
     <p>Currently, we are finishing several substantial improvements to the architecture for managing and sharing city models sponsored by the Boston Planning and Development Agency. This new architecture will allow us to connect several other projects that wil link several other projects across the Boston metro area.
     <ul>
-    <li><a href="./Metro3d_Slideshow_pbcGIS.pdf">Latest Metro3d Slideshow</a> documents the effort sponsored by the BPDA.
+    <li><a href="https://www.pbcgis.com/boston3d/BPDA_ModelCollectionMgt.pdf">Latest Metro3d Slideshow</a> documents the effort sponsored by the BPDA.
     
       <li>Treatment of 3d Models as historical assets within a collaborative archiving and annotation tool like <a href="https://chcomeka.azurewebsites.net/omeka-s/s/cdash/page/home">The Cambridge Digital Architectural Survey and History</a> (another pbcGIS project!)
       <li>Linking of a vast collection of detailed historic maps being compiled by the Norman Leventhal Map Center at the Boston Public Library <a href="https://atlascope.leventhalmap.org/#view:map">AtlasScope.</a>  We wil be tiling selected historical atlas maps for use in extending the Boston Metro 3D model back in time. 
