modified:   filesystem/index.htm 	modified:   home/index.htm 	modified:   model_collection/index.htmx 	modified:   model_management/index.htm 	modified:   resources/cityschema_includes.js 	modified:   template/index.htm 	modified:   template/indexbk.htm 	modified:   terrain/index.htm 	new file:   whatsnew/images/tall.jpg 	new file:   whatsnew/images/wide.jpg 	new file:   whatsnew/index.htm

--- a/home/index.htm
+++ b/home/index.htm
@@ -4,7 +4,7 @@
 <head>
     <title>City Model Stewardship</title>
     <title>Template</title>
-    <meta name="description" content="Home page for the citySchema project.  A gateway for tools, techniques and documentation avout cross-siciplinary collaboration on city models. ">
+    <meta name="description" content="Home page for the citySchema project.  A gateway for tools, techniques and documentation avout cross-disciplinary collaboration on city models. ">
     <meta name="keywords" content="City Modeling, Digital Humanities, Geography">
     <meta name="author" content="Paul B. Cote">
     
