--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,16 +38,17 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
-  <h3 id="coordinationvid">January 12, 2022: Intro video posted on YouTube.</h3>
-  <p>The first video has been posted to the citySchema.org YouTube channel.  <a href="https://www.youtube.com/watch?v=mhk7He_oTC4" target="sidecar">Take and Give: Coordinating City Model Activity</a> provides an intro to the citySchema architecture and a technical overview of the technique for sharing editable models with any commercial modeling tool while retaining precise 3D georeferencing.
+  <ul>
+  <li id="coordinationvid"><b>January 12, 2022: Intro video posted on YouTube.</b>
+  <p>The first video has been posted to the citySchema.org YouTube channel.  <a href="https://youtu.be/IeyYV5W5u94" target="sidecar">Take and Give: Coordinating City Model Activity</a> provides an intro to the citySchema architecture and a technical overview of the technique for sharing editable models with any commercial modeling tool while retaining precise 3D georeferencing.
   </p>
-  <h3 id="2022funding">January 1, 2022: A New Year of Funding for citySchema.org.</h3>
+  <li id="2022funding"><b>January 1, 2022: A New Year of Funding for citySchema.org.</b>
   <p>The Boston Planning and Development Agency has renewed its support for citySchema.org with a new year of funding to support the continued development of tools and documentation!  
 
-  <h3 id="modelmgt_git">December 27, 2021: Model Collection Management Tools for ArcGIS Pro posted on GitHub.</h3>
+  <li id="modelmgt_git"><b>December 27, 2021: Model Collection Management Tools for ArcGIS Pro posted on GitHub.</b>
   <p>An ArcGIS Pro project with all of the tools, tasks and layers necessary to demonstrate the procedures for updating the building model collection has been posted on GitHub.  This repo has a demo data-set that canbe used to demonstrate all of the tasks, which are documented below in the section on <a href="../model_management/index.htm">Model Collection Management in ArcGIS Pro</a>.
   </p>
-
+ 
 
 
 
