modified:   model_management/index.htm

--- a/model_management/index.htm
+++ b/model_management/index.htm
@@ -750,11 +750,11 @@ Stages in the lifecycle of a model management workspace are depicted in the slid
         <img  src="./images/arcgis_edit_tasks.jpg">
         <figcaption>The Edit Models with ArcGIS task group.</figcaption>
       </figure>
-      <p>Creating and editing models with ArcGIS is carried out in a Model Batch folder.  I recommend starting a new batch for this purpose.  If you are editing model from the pre-existing Stage feature classes, you may begin by copying these to a feature class in the Batch Geodatabase.  Then you have freedom to try things and make mistakes and check and revise your altered models before pasting or appending them into the <b>Prep_MP</b> feature class.  Once there, the procedure for adding model-specific attributes and the automatically generated attributes is the same as outlined in the section on <a href="#import">Importing Models</b>.
+      <p>Creating and editing models with ArcGIS is carried out in a Model Batch folder.  I recommend starting a new batch for this purpose.  If you are editing model from the pre-existing Stage feature classes, you may begin by copying these to a feature class in the Batch Geodatabase.  Then you have freedom to try things and make mistakes and check and revise your altered models before pasting or appending them into the <b>Prep_MP</b> feature class.  Once there, the procedure for adding model-specific attributes and the automatically generated attributes is the same as outlined in the section on <a href="#import">Importing Models</a>.
       </p><p>
         Models created this way are appended to the <b>Stage_NewModels_MP</b>  feature class and integrated into their context just like new models.  
       </p>
-      <h2>WOrkflows for Surface Edits</h2>
+      <h2>Workflows for Surface Edits</h2>
       <figure class="right">
         <img  src="./images/surface_edit_tasks.jpg">
         <figcaption>The Edit Models with ArcGIS task group.</figcaption>
