--- a/model_management/index.htm
+++ b/model_management/index.htm
@@ -50,9 +50,10 @@
       <li><a href="#lifecycle">Lifecycle of a Model Management Workspace</a>
       <li><a href="#project">Tour of the ArcGIS Pro Project: Properties, Layers and Views</a>
       <li><a href="#initialize">Initializing the Workspace</a>
+      <li><a href="#batches">Prepare a Model Work Batch </a>
       <li><a href="#import">Import, Inspect and Enroll Models</a>
       <li><a href="#normals">Surface Normals: Why models may not be reflecting light correctly.</a>
-      <li><a href="#stage">Promote and Demote Models</a>
+      <li><a href="#stage">Promote and Demote Model Status Attributes</a>
       <li><a href="#edit">Model Editing Workflows</a>
       <li><a href="#nextedition">Publishing the Next Edition Model Collection</a>
       </ol>
@@ -409,7 +410,7 @@ Stages in the lifecycle of a model management workspace are depicted in the slid
          </p> 
 
 
-        <h3>Model Batch Folders</h3>
+        <h3 id="batches">Model Batch Folders</h3>
         <figure class="right">
           <img  src="./images/model_work.jpg">
           <figcaption>Model sources are stored in Dated ModelBatch folders.</figcaption>
@@ -813,7 +814,7 @@ Stages in the lifecycle of a model management workspace are depicted in the slid
    <ol>
     <li>The <b>Initialize Next Edition GDB Task</b> Creates an geodatabase in the <b>ModelMgt\NextEdition</b> folder.  The new geodatabase includes a set of  empty feature classes based on the currentmodeltemplate ready to recieve the new collection.  As discussed under the heading <a href="#lifecycle">Lifecycle of the Model Management Workspace</a>, the <b>NextEdition</b> folder can contain several updated editions of the model collections based off of the same PriorArchived collection. Each of these new editions is distinguished by a YYYYMMDD date stamp that reflects the date that the new edition was initialized.
     <li>The task, <b>Check for Bad Status Values</b> should now be run to make sure that none of the Stage feature classes include non-standard values for Status.  These can creep into the mix if aperson updates status values outside ofthe Attributes panel.  The danger of letting badvaluespersistbefore the next step is that models with bad statusvalues will dissappear without a trace.  (They can be recovered, but only after someone notices that they are missing.)
-    <p>This task will haltwith an error if a bad status value is encountered.  Looking through the task's messages will reveal which feature class has a bad status value.   
+    <p>This task will halt with an error if a bad status value is encountered.  Looking through the task's messages will reveal which feature class has a bad status value.   
     <li>The task, <b>Sort Models into New Feature Classes</b> uses the geoprocessing tool, <b>5d. Status Router</b> to iterate through eachof the multipatch feature classes inthe Stage geodatabase, selecting models according tostatus class, and appending each set to the appropriate feature class.   
     <li>The <b>Copy Misc FCs and Create Building Footprints</b> task copies the Issue Points and Development Log table from Stage into the next edition feature class.  These are useful to include for reference.  The building models from the Active_MP feature class (excluding walls) are alsorendered as apolygon feature class with this task.
     <li>Finally, the <b>Generate Model Catalog</b> task produces the one-table comprehensive catalog of models.  The table starts as a geodatabase point feature class, and is also rendered as a CSV table and a GeoJson file. 
